tests/NormalTests/paczka1/small_fuzzy/30596760.err
Error in line 9: Upk S859 2,4
Error in line 15: IxMFZI1fTC S743 30,0
